Support for v3 attributes (#1206)